fixed layout issues, and interaction between edit_expr, view_expr, and community pages. Worked on text editor. Fixed minor saving bug.

--- a/libsrc/scss/community.scss
+++ b/libsrc/scss/community.scss
@@ -74,7 +74,6 @@
     z-index: 0;
     left: 0; top: 0;
     width: 100%; height: 100%;
-    overflow: auto;
     
     #header {
         margin: 60px 0;
